# tom-ai-assistant

./: .gitignore  pyproject.toml
tests/: openai_api_test.py  settings.py
tom_ai_assistant/app/: main.py
tom_ai_assistant/app/api/routes/: chat.py
tom_ai_assistant/app/config/: config.py
tom_ai_assistant/app/models/: schemas.py
tom_ai_assistant/app/services/: ai_service.py  weather_service.py
