[tool.poetry]
name = "tom-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
openai = "^1.75.0"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
setuptools = "^79.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
